--- a/Ofimedic.Backend/Ofimedic.Backend/packages.config
+++ b/Ofimedic.Backend/Ofimedic.Backend/packages.config
@@ -8,6 +8,9 @@
   <package id="Microsoft.AspNet.WebApi.Core.es" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost.es" version="5.2.9" targetFramework="net48" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net48" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
 </packages>
