--- a/Ofimedic.Backend.VB/Web.config
+++ b/Ofimedic.Backend.VB/Web.config
@@ -17,7 +17,7 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8" executionTimeout="300"/>
   </system.web>
   <system.webServer>
     <handlers>
