--- a/Ofimedic.Frontend/Ofimedic.Frontend/Web.config
+++ b/Ofimedic.Frontend/Ofimedic.Frontend/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.8" />
-    <httpRuntime targetFramework="4.8" />
+    <httpRuntime targetFramework="4.8" executionTimeout="300" />
   </system.web>
   <system.codedom>
     <compilers>
